src/test/ui/parser/issue-15914.stderr
error: expected identifier, found `(`
  --> $DIR/issue-15914.rs:3:9
   |
LL |         (); //~ ERROR expected identifier, found `(`
   |         ^ expected identifier

error: aborting due to previous error

